Cambios_Errores
- Ajustadas las funcionalidades de Login, RegisterUser y RegisterBot al formato definido en clase. Faltan las otras :)